# CMakePrivateLinkageBug

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
emptyStatic1/: CMakeLists.txt
emptyStatic2/: CMakeLists.txt
interface2/: CMakeLists.txt
shared1/: CMakeLists.txt  shared1.cpp
static3/: CMakeLists.txt  static3.cpp  static3.h
static4data/: CMakeLists.txt  static4data.cpp  static4data.h
static5/: CMakeLists.txt  static5.cpp  static5.h
